<resources>
    <string name="app_name" translatable="false">Sæbiz</string>
    <string name="here_will_be_text_in_latin_kazakh">Here will be the converted text</string>
    <string name="enter_text_in_cyrillic_kazakh">Enter Text in cyrillic/latin Kazakh</string>
    <string name="btnClean">Clean</string>
    <string name="btnInsert">Insert</string>
    <string name="btnConvert">Convert</string>
    <string name="copy_all">Copy All</string>
    <string name="share_using">Share using?</string>
    <string name="share">Share</string>
    <string name="cyrillic_to_latin">Cyrillic To Latin</string>
    <string name="latin_to_cyrillic">Latin To Cyrillic</string>
    <string name="TextCopied">Text copied</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="cyrillic">Cyrillic</string>
    <string name="latin">Latin</string>
    <string name="myAlphabet">My Alphabet</string>
    <string name="unicode1BasicLatinASCII">1. Basic Latin ASCII</string>
    <string name="unicode2Latin1Supplement">2. Latin-1 Supplement</string>
    <string name="unicode3LatinExtendedA">3. Latin Extended-A</string>
    <string name="unicode4LatinExtendedB">4. Latin Extended-B</string>
    <string name="unicode5LatinExtendedC">5. Latin Extended-C</string>
    <string name="unicode6LatinExtendedD">6. Latin Extended-D</string>
    <string name="unicode7LatinExtendedE">7. Latin Extended-E</string>
    <string name="unicode8LatinExtendedAdditional">8. Latin Extended Additional</string>
    <string name="unicode9LatinLigatures">9. Latin Ligatures</string>
    <string name="unicode10FullwidthLatinLetters">10. Fullwidth Latin Letters</string>
    <string name="unicode11IpaExtensions">11. Ipa Extensions</string>
    <string name="unicode12PhoneticExtensions">12. Phonetic Extensions</string>
    <string name="unicode13PhoneticExtensionsSupplement">13. Phonetic Extensions Supplement</string>
    <string name="mytable" translatable="false">mytable</string>
    <string name="activity_edit">Choose Latin alphabet from spinner and then the letter:</string>
    <string name="activity_table_text">You may create your own Alphabet, just choose the letter in column \"My Alphabet\" to edit:</string>
    <string name="activity_table_title_actionbar">Edit My Alphabet...</string>
    <string name="activity_table_title_word_editing">Word Editing</string>
</resources>
