<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dd.newqazaqalphabet.seabis.Main0Activity"
    tools:showIn="@layout/activity_main0">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFirstState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cyrillic"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary" />

        <ImageView
            android:id="@+id/ivChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            android:src="@drawable/ic_action_switch2" />
        <!--<ToggleButton-->
        <!--android:id="@+id/toggleButton"-->
        <!--style="?android:buttonBarButtonStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->

        <!--android:checked="false"-->

        <!--android:textColor="@color/primary"-->
        <!--android:textOff=""-->
        <!--android:textOn="" />-->

        <TextView
            android:id="@+id/tvSecondState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/latin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />

    <ScrollView
        android:id="@+id/scrollViewEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1">

        <EditText
            android:id="@+id/etUpEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"

            android:gravity="start"
            android:hint="@string/enter_text_in_cyrillic_kazakh"
            android:paddingBottom="16dp"

            android:textColor="@color/primary_text" />


    </ScrollView>


</LinearLayout>
