<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dd.newqazaqalphabet.seabis.Main0Activity">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.dd.newqazaqalphabet.seabis.Main0Activity"
        tools:showIn="@layout/activity_main0">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/spinnerFirstState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"


                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary" />
            <ImageView
                android:id="@+id/ivChangeButtonspinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"



                android:layout_marginTop="16dp"
                android:elevation="0dp"
                android:src="@drawable/ic_action_switch2" />


            <Spinner
                android:id="@+id/spinnerSecondState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/latin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark" />

        <ScrollView
            android:id="@+id/scrollViewEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    style="@style/MyCardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivDelete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_action_clear" />

                        <EditText
                            android:id="@+id/etUpEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/enter_text_in_cyrillic_kazakh"
                            android:paddingBottom="16dp"
                            android:paddingTop="16dp"

                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/primary_text" />

                        <ImageView
                            android:id="@+id/ivInsert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"

                            android:src="@drawable/ic_action_paste" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/MyCardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/primary"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primary"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/here_will_be_text_in_latin_kazakh"
                            android:textColorHint="@color/primary_light"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/icons" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/ivCopyAll"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_action_copy" />

                            <ImageView
                                android:id="@+id/ivShare"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:src="@drawable/ic_action_share" />

                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</RelativeLayout>
